interfaces dynamic done, active users

--- a/silver_network/views/silver_core_views.xml
+++ b/silver_network/views/silver_core_views.xml
@@ -64,6 +64,7 @@
                         <button name="button_view_routes" type="object" string="View Routes"/>
                         <button name="button_view_ppp_active" type="object" string="View PPP Active"/>
                         <button name="button_view_firewall_rules" type="object" string="View Firewall Rules"/>
+                        <button name="button_view_active_users" type="object" string="View Active Users"/>
                         <button name="button_view_queues" type="object" string="View Queues"/>
                         <!--field name="state" widget="statusbar" statusbar_visible="down,active"/-->
                     </header>
