--- a/silver_provisioning/views/silver_contract_views.xml
+++ b/silver_provisioning/views/silver_contract_views.xml
@@ -9,6 +9,12 @@
                 <xpath expr="//header" position="inside">
                                             <button name="action_activate_service" string="Activar Servicio" type="object" class="oe_highlight" invisible="(state != 'open') or (state_service != 'inactive')"/>
                         <button name="action_cutoff_service" string="Cortar Servicio" type="object" class="oe_highlight" invisible="state_service != 'active'"/>
+                        <button name="action_suspend_service" string="Suspender Servicio" type="object" class="oe_highlight" invisible="state_service != 'active'"/>
+                        <button name="action_terminate_service" string="Dar de Baja" type="object" class="oe_highlight" invisible="state != 'open'"/>
+                      <button name="action_reconnection_service_button" type="object" class="oe_stat_button" icon="fa-rss" string="Restaurar Servicio" invisible="state_service not in ['disabled', 'suspended']"/>
+                                    <button name="action_ping_service" type="object" class="oe_stat_button" icon="fa-feed" string="PING"/>
+                                    <button name="action_contract_reboot_onu" type="object" class="oe_stat_button" icon="fa-refresh" string="Reiniciar ONU"/>
+                                    <button name="action_change_ont_service" type="object" class="oe_stat_button" icon="fa-exchange" string="Cambiar ONU"/>
 
                 </xpath>
 
@@ -24,15 +30,7 @@
 
                 <xpath expr="//notebook" position="inside">
                     <page name="provisioning" string="Servicio Internet">
-                                <!--div class="oe_button_box" name="button_box">
-                                    <button name="action_reconnection_service_button" type="object" class="oe_stat_button" icon="fa-rss" string="Reconectar" invisible="state != 'open'"/>
-                                    <button name="action_ping_service" type="object" class="oe_stat_button" icon="fa-feed" string="PING"/>
-                                    <button name="action_status_olt" type="object" class="oe_stat_button" icon="fa-signal" string="Status OLT"/>
-                                    <button name="action_test_speed_service" type="object" class="oe_stat_button" icon="fa-rocket" string="Test Velocidad"/>
-                                    <button name="action_remove_service" type="object" class="oe_stat_button" icon="fa-times-circle" string="Eliminar Servicio"/>
-                                    <button name="action_contract_reboot_onu" type="object" class="oe_stat_button" icon="fa-refresh" string="Reiniciar ONU"/>
-                                    <button name="action_change_ont_service" type="object" class="oe_stat_button" icon="fa-exchange" string="Cambiar ONU"/>
-                                </div-->
+
                                 <group name="ips_networks_1">
                                     <group>
                                         <field name="link_type" readonly="state != 'draft'"/>
@@ -46,13 +44,16 @@
                                     <group invisible="link_type == 'lan'">
                                         <field name="node_id" readonly="state != 'draft'"/>
                                         <field name="box_id" readonly="state != 'draft'" invisible="link_type not in ['fiber', 'fttb']"/>
-                                        <!--field name="port_nap" readonly="state != 'draft'" invisible="link_type not in ['fiber', 'fttb']"/-->
                                         <field name="ap_id" readonly="state != 'draft'" invisible="link_type != 'wifi'"/>
                                     </group>
                                     <group>
                                         <field name="core_id" readonly="state != 'draft'" options="{'no_create': True, 'no_open': True}"/>
                                         <field name="olt_id" readonly="state != 'draft'" invisible="link_type not in ['fiber', 'fttb']" options="{'no_create': True, 'no_open': True}"/>
                                         <field name="olt_port_id" readonly="state != 'draft'" invisible="link_type not in ['fiber', 'fttb']"/>
+                                        <div class="o_row" invisible="link_type not in ['fiber', 'fttb']">
+                                            <field name="olt_status" widget="badge" decoration-success="olt_status == 'online'" decoration-danger="olt_status in ('offline', 'los')" decoration-warning="olt_status == 'unknown'"/>
+                                            <button name="action_check_olt_status" type="object" icon="fa-question-circle" class="oe_link"/>
+                                        </div>
                                         <field name="splitter_id" readonly="state != 'draft'" invisible="link_type not in ['fiber', 'fttb']"/>
                                     </group>
                                 </group>
