--- a/silver_l10n_ve_electronic_invoice/views/account_move_views.xml
+++ b/silver_l10n_ve_electronic_invoice/views/account_move_views.xml
@@ -13,7 +13,7 @@
                         string="Enviar Factura Electrónica"
                         type="object"
                         class="oe_highlight"
-                        attrs="{'invisible': ['|', ('electronic_invoice_state', 'in', ['accepted']), ('state', '!=', 'posted')]}"/>
+                        invisible="(electronic_invoice_state in  ['accepted'] )or state != 'posted'"/>
             </header>
             <xpath expr="//div[hasclass('oe_title')]" position="before">
                 <field name="electronic_invoice_state" widget="statusbar"
@@ -28,7 +28,7 @@
                         </group>
                         <group>
                             <field name="electronic_invoice_last_error"
-                                   attrs="{'invisible': [('electronic_invoice_last_error', '=', False)]}"/>
+                                   invisible="electronic_invoice_last_error== False"/>
                         </group>
                     </group>
                 </page>
