--- a/silver_provisioning/views/silver_contract_views.xml
+++ b/silver_provisioning/views/silver_contract_views.xml
@@ -7,15 +7,17 @@
             <field name="inherit_id" ref="silver_contract.silver_contract_view_form"/>
             <field name="arch" type="xml">
                 <xpath expr="//header" position="inside">
-                                            <button name="action_activate_service" string="Activar Servicio" type="object" class="oe_highlight" invisible="(state != 'open') or (state_service != 'inactive')"/>
-                        <button name="action_cutoff_service" string="Cortar Servicio" type="object" class="oe_highlight" invisible="state_service != 'active'"/>
-                        <button name="action_suspend_service" string="Suspender Servicio" type="object" class="oe_highlight" invisible="state_service != 'active'"/>
-                        <button name="action_terminate_service" string="Dar de Baja" type="object" class="oe_highlight" invisible="state != 'open'"/>
-                      <button name="action_reconnection_service_button" type="object" class="oe_stat_button" icon="fa-rss" string="Restaurar Servicio" invisible="state_service not in ['disabled', 'suspended']"/>
-                                    <button name="action_ping_service" type="object" class="oe_stat_button" icon="fa-feed" string="PING"/>
-                                    <button name="action_contract_reboot_onu" type="object" class="oe_stat_button" icon="fa-refresh" string="Reiniciar ONU"/>
-                                    <button name="action_change_ont_service" type="object" class="oe_stat_button" icon="fa-exchange" string="Cambiar ONU"/>
+                    <button name="action_provision_base" string="Aprovisionar Servicio" type="object" class="oe_highlight" invisible="state_service != 'inactive'"/>
 
+                    <button name="action_provision_wan" string="Configurar WAN" type="object" class="oe_highlight" invisible="not olt_id.is_gestion_pppoe or wan_config_successful or (state_service == 'inactive')"/>
+                    <button name="action_provision_wifi" string="Aplicar WiFi" type="object" class="oe_highlight" invisible="wifi_config_successful or (state_service == 'inactive')"/>
+
+                    <button name="action_suspend_service" string="Suspender Servicio" type="object" class="oe_highlight" invisible="state_service != 'active'"/>
+                    <button name="action_terminate_service" string="Dar de Baja" type="object" class="oe_highlight" invisible="(state != 'open') or (state_service not in ['active', 'suspended'])"/>
+                    <button name="action_reconnection_service_button" type="object" class="oe_stat_button" icon="fa-rss" string="Restaurar Servicio" invisible="state_service not in ['disabled', 'suspended']"/>
+                    <button name="action_ping_service" type="object" class="oe_stat_button" icon="fa-feed" string="PING"/>
+                    <button name="action_contract_reboot_onu" type="object" class="oe_stat_button" icon="fa-refresh" string="Reiniciar ONU"/>
+                    <button name="action_change_ont_service" type="object" class="oe_stat_button" icon="fa-exchange" string="Cambiar ONU"/>
                 </xpath>
 
                 <xpath expr="//field[@name='line_ids']/tree/field[@name='name']" position="before">
@@ -30,7 +32,10 @@
 
                 <xpath expr="//notebook" position="inside">
                     <page name="provisioning" string="Servicio Internet">
-
+<field name="wan_config_successful" invisible="1"/>
+                        <field name="wifi_config_successful" invisible="1"/>
+                        <field name="state_service"/>
+                        <field name="state"/>
                                 <group name="ips_networks_1">
                                     <group>
                                         <field name="link_type" readonly="state != 'draft'"/>
@@ -38,6 +43,7 @@
                                     <group>
                                         <field name="pppoe_user"/>
                                         <field name="pppoe_password" password="True"/>
+                                         <field name="vlan_id"/>
                                     </group>
                                 </group>
                                 <group name="ips_networks_2" string="Datos Red Externa Asignada">
@@ -45,11 +51,13 @@
                                         <field name="node_id" readonly="state != 'draft'"/>
                                         <field name="box_id" readonly="state != 'draft'" invisible="link_type not in ['fiber', 'fttb']"/>
                                         <field name="ap_id" readonly="state != 'draft'" invisible="link_type != 'wifi'"/>
-                                    </group>
+                                    </group>re
                                     <group>
                                         <field name="core_id" readonly="state != 'draft'" options="{'no_create': True, 'no_open': True}"/>
-                                        <field name="olt_id" readonly="state != 'draft'" invisible="link_type not in ['fiber', 'fttb']" options="{'no_create': True, 'no_open': True}"/>
-                                        <field name="olt_port_id" readonly="state != 'draft'" invisible="link_type not in ['fiber', 'fttb']"/>
+                                        <field name="olt_id" readonly="state != 'draft'" invisible="link_type not in ['fiber', 'fttb']" options="{'no_create': True}"/>
+                        <field name="olt_port_id" />
+                        <field name="onu_pon_id" />
+                        <field name="box_id" />
                                         <div class="o_row" invisible="link_type not in ['fiber', 'fttb']">
                                             <field name="olt_status" widget="badge" decoration-success="olt_status == 'online'" decoration-danger="olt_status in ('offline', 'los')" decoration-warning="olt_status == 'unknown'"/>
                                             <button name="action_check_olt_status" type="object" icon="fa-question-circle" class="oe_link"/>
@@ -87,47 +95,25 @@
                                     </group>
                                 </group>
                              <group>
-                                    <group string="Credenciales WiFi">
-                                        <field name="sssid"/>
-                                        <field name="password"/>
-                                        <field name="custom_channel_id" invisible="link_type != 'wifi'"/>
-                                    </group>
-                                  <group string="Configuración WAN">
-                                    <field name="contract_mode_wan_ids">
-                                        <tree editable="bottom">
-                                            <field name="name"/>
-                                            <field name="protocol"/>
-                                            <field name="vlan_id"/>
-                                        </tree>
-                                    </field>
-                                </group>
-                                </group>
 
-                      <group name="data_radius" string="Informacion Radius">
-                                <field name="radius_entry_ids" readonly="1">
-                                    <tree>
-                                        <field name="session_start"/>
-                                        <field name="session_end"/>
-                                        <field name="session_duration"/>
-                                        <field name="framed_ip_address"/>
-                                        <field name="nas_ip_address"/>
+                        </group>
+                         <group string="Credenciales WiFi">
+                                <field name="sssid" invisible="1"/>
+                                <field name="password" invisible="1" password="True"/>
+                             <field name="custom_channel_id"/>
+                                <!--field name="contract_mode_wan_ids"/-->
+                                <field name="wifi_line_ids">
+                                    <tree editable="bottom">
+                                        <field name="ssid_index"/>
+                                        <field name="name"/>
+                                        <field name="password" password="True"/>
+                                        <field name="is_hidden"/>
+                                        <field name="auth_mode"/>
+                                        <field name="encrypt_type"/>
                                     </tree>
                                 </field>
+
                             </group>
-                            <!--page name="gestion_wifi" string="Gestión Onu/WiFi">
-
-                            </page>
-                            <page name="mb_consumption" string="Consumo Megas">
-                                <field name="consumption_ids" readonly="1">
-                                    <tree>
-                                        <field name="date"/>
-                                        <field name="download_gb"/>
-                                        <field name="upload_gb"/>
-                                        <field name="total_gb"/>
-                                    </tree>
-                                </field>
-                            </page-->
-
                     </page>
                 </xpath>
             </field>
