--- a/silver_network/views/silver_core_views.xml
+++ b/silver_network/views/silver_core_views.xml
@@ -59,13 +59,13 @@
                     <header>
                         <!--button name="create_ap" string="Crear Equipo AP" type="object"/-->
                         <!--button name="create_radius" string="Crear Radius" type="object" invisible="not is_silver_radius"/-->
-                        <button name="button_get_system_info" type="object" string="Get System Info"/>
-                        <button name="button_view_interfaces" type="object" string="View Interfaces"/>
-                        <button name="button_view_routes" type="object" string="View Routes"/>
-                        <button name="button_view_ppp_active" type="object" string="View PPP Active"/>
-                        <button name="button_view_firewall_rules" type="object" string="View Firewall Rules"/>
-                        <button name="button_view_active_users" type="object" string="View Active Users"/>
-                        <button name="button_view_queues" type="object" string="View Queues"/>
+                        <button name="button_get_system_info" type="object" string="Sistema"/>
+                        <button name="button_view_interfaces" type="object" string="Interfaces"/>
+                        <button name="button_view_routes" type="object" string="Rutas"/>
+                        <button name="button_view_ppp_active" type="object" string="PPP Activos"/>
+                        <button name="button_view_firewall_rules" type="object" string="Firewall"/>
+                        <button name="button_view_active_users" type="object" string="Usuarios Activos"/>
+                        <button name="button_view_queues" type="object" string="Queues"/>
                         <!--field name="state" widget="statusbar" statusbar_visible="down,active"/-->
                     </header>
                     <sheet string="Equipo Core Silver">
@@ -84,17 +84,18 @@
                             <button name="action_connect_core" type="object" class="oe_stat_button" icon="fa-signal" string="Probar Conexion"/-->
 
                         </div>
-                        <widget name="web_ribbon" title="Active" invisible="state == 'down'"/>
-                        <widget name="web_ribbon" title="Down" bg_color="bg-danger" invisible="state == 'active'"/>
+                        <!--widget name="web_ribbon" title="Active" invisible="state == 'down'"/>
+                        <widget name="web_ribbon" title="Down" bg_color="bg-danger" invisible="state == 'active'"/-->
                         <field name="state" invisible="1"/>
                         <div class="oe_title">
                             <h1>
+                                <label for="name"/>
                                 <field name="name"  required="1"/>
                             </h1>
                          </div>
                         <group name="core">
                             <group>
-                                <field name="hostname_core" autofocus="autofocus" required="1"/>
+
                                 <field name="node_id"  required="1"/>
                                 <field name="node_ids" widget="many2many_tags" invisible="1"/>
 
@@ -102,19 +103,31 @@
                             <group name="core_conexion" string="Datos Conexion">
 
                                 <field name="ip"  required="1"/>
-                                <field name="port"/>
+                                <field name="port" />
+                                  <field name="radius_id" required="1"/>
+                                 <field name="state" widget="badge" decoration-danger="state == 'down'"
+                           decoration-success="state == 'active'"/>
+                                <field name="hostname_core" invisible="state!='active'"/>
+
+
+                                    <button name="button_test_connection" type="object" string="Probar Conexión"
+                                        class="oe_highlight"  invisible="askuser==True"/>
+                                <br/>
+
+<field name="askuser" invisible="1"/>
+
+
                                 <!--field name="type_connection" invisible="brand_description != 'hua'"/-->
                                 <!--field name="kex_algorithms_ids" invisible="brand_description != 'hua'" widget="many2many_tags"/-->
 
-                                <field name="username" invisible="configured=='2'"/>
-                                <field name="password" password="True" invisible="configured=='2'"/>
-                                  <field name="radius_id" />
-                                <field name="configured" invisible="0"/>
+                                <field name="username" invisible="askuser==False"/>
+                                <field name="password" password="True" invisible="askuser==False"/>
+
+
                                 <!--button class="oe_inline oe_link " name="action_send_password" string=" →Enviar Contraseña" type="object"/-->
-                                <button name="button_test_connection" type="object" string="Conectar"
-                                        class="oe_highlight"/>
-<button name="button_reset_connection" type="object" string="Reset"
-                                        class="oe_highlight"/>
+                                <button name="button_test_connectionu" type="object" string="Conectar"
+                                        class="oe_highlight" invisible="askuser==False"/><br/>
+
                             </group>
                         </group>
 
