--- a/silver_product/views/silver_olt_views.xml
+++ b/silver_product/views/silver_olt_views.xml
@@ -7,6 +7,7 @@
             <field name="inherit_id" ref="silver_network.view_silver_olt_form"/>
             <field name="arch" type="xml">
                 <xpath expr="//group[@name='olt']/group[1]" position="inside">
+                    <separator string="Equipo"/>
                     <field name="stock_lot_id"/>
                     <field name="brand_name"/>
                     <field name="model_name"/>
