--- a/silver_product/views/stock_lot_views.xml
+++ b/silver_product/views/stock_lot_views.xml
@@ -13,12 +13,26 @@
                 -->
                  <xpath expr="//field[@name='product_id']" position="before">
                     <field name="external_equipment" widget="boolean_toggle"/>
-                        <field name="serial_number" invisible="1"/>
+
+
                         <field name="applied_accounting_cost" widget="boolean_toggle"/>
                 </xpath>
+                 <xpath expr="//field[@name='product_id']" position="after">
+                     <field name="brand_name" readonly="product_id!=False"/>
+                     <field name="model_name" readonly="product_id!=False"/>
+                     <field name="software_version" readonly="product_id!=False"/>
+                     <field name="firmware_version" readonly="product_id!=False"/>
+
+                        <field name="serial_number" invisible="1"/>
+                 </xpath>
                 <field name="product_id" position="attributes">
+                    <attribute name="required">external_equipment != True</attribute>
                     <attribute name="context">{'open_product_template': True}</attribute>
+                    <attribute name="on_change">1</attribute>
                 </field>
+                <xpath expr="//form" position="attributes">
+                    <attribute name="class" add="form_stocklot"/>
+                </xpath>
             </field>
         </record>
     </data>
