--- a/silver_network/views/silver_router_wizards_views.xml
+++ b/silver_network/views/silver_router_wizards_views.xml
@@ -239,6 +239,7 @@
                             <field name="caller_id" readonly="1" invisible="1"/>
                             <field name="address" readonly="1"/>
                             <field name="uptime" readonly="1"/>
+
                         </group>
                                 <group>
                                 </group>
@@ -288,13 +289,17 @@
                         </group>
                         <notebook>
                             <page string="Active Connections">
+                                 <field name="line_ids" widget="interface_speed_updater" r="line_ids"  options="{'r': 'interface'}"/>
                                 <field name="line_ids">
-                                    <tree string="Active Connections" create="false" delete="false">
+                                    <tree string="Active Connections" create="false" delete="false" readonly="1">
                                         <field name="name"/>
                                         <field name="service"/>
                                         <field name="uptime"/>
                                         <field name="caller_id"/>
                                         <field name="address"/>
+
+                                    <field name="rx_speed"/>
+                                    <field name="tx_speed"/>
                                         <button name="action_open_speed_chart" type="object" icon="fa-area-chart"/>
                                     </tree>
                                 </field>
@@ -382,14 +387,20 @@
                         </group>
                         <notebook>
                             <page string="Queues">
-                                <field name="line_ids">
+                                 <field name="line_ids" widget="interface_speed_updater" r="line_ids"  options="{'r': 'interface'}"/>
+                                <field name="line_ids" readonly="1">
                                     <tree string="Queues">
                                         <field name="name"/>
                                         <field name="target"/>
                                         <field name="max_limit"/>
-                                        <field name="burst_limit"/>
+                                        <!--field name="burst_limit"/-->
                                         <field name="disabled"/>
                                         <field name="comment"/>
+
+                                    <field name="rx_speed"/>
+                                    <field name="tx_speed"/>
+
+                                        <button name="action_open_speed_chart" type="object" icon="fa-area-chart"/>
                                     </tree>
                                 </field>
                             </page>
@@ -403,6 +414,39 @@
             <field name="name">Router Queues</field>
             <field name="res_model">silver.netdev.queue.wizard</field>
             <field name="view_mode">tree,form</field>
+        </record>
+
+
+
+        <record id="view_silver_router_queue_wizard_line_form" model="ir.ui.view">
+            <field name="name">silver.netdev.queue.wizard.line.form</field>
+            <field name="model">silver.netdev.queue.wizard.line</field>
+            <field name="arch" type="xml">
+                <form string="Queue Connection Speed" readonly="1">
+                    <sheet>
+                        <group>
+                            <group>
+
+                            <field name="name" readonly="1"/>
+                            <field name="target" readonly="1"/>
+                            <field name="max_limit" readonly="1" />
+                            <field name="disabled" readonly="1"/>
+                            <field name="comment" readonly="1"/>
+                        </group>
+                                <group>
+                                </group>
+                        </group>
+                        <notebook>
+                            <page string="Realtime Speed">
+                                <field name="queue_speed_chart" widget="queue_line_speed_chart"/>
+                            </page>
+                        </notebook>
+                    </sheet>
+                    <footer>
+                        <button string="OK" class="btn-primary" special="cancel"/>
+                    </footer>
+                </form>
+            </field>
         </record>
 
         <!-- Wizard for Active Users -->
